--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
+    "pathfinding": "^0.4.18",
     "pug": "2.0.0-beta11"
   }
 }
