--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --mode development"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -14,5 +16,9 @@
     "node-sass-middleware": "0.11.0",
     "pathfinding": "^0.4.18",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
