--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "eslint": "^5.7.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
