--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "eslint": "^5.7.0",
-    "webpack": "^4.20.2",
+    "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   }
 }
