--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "pathfinding": "^0.4.18",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "eslint": "^5.7.0",
+    "jsdoc": "^3.5.5",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   }
