--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "prestart": "npm run build",
+    "heroku-prebuild": "npm install --only=dev",
     "build": "webpack --mode none",
     "watch": "webpack --watch --mode development",
     "test": "eslint src/{grid,helper,index,maze}.js ./bin/* ./routes/*"
