--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "scripts": {
     "start": "node ./bin/www",
-    "prestart": "npm run build",
+    "postinstall": "npm run build",
     "heroku-prebuild": "npm install --only=dev",
     "build": "webpack --mode none",
     "watch": "webpack --watch --mode development",
