--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "heroku-prebuild": "npm install --only=dev",
     "build": "webpack --mode none",
     "watch": "webpack --watch --mode development",
-    "test": "eslint src/{grid,helper,index,maze}.js ./bin/* ./routes/*"
+    "test": "eslint src/{grid,helper,index,maze}.js ./bin/* ./routes/* | mocha test --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -25,8 +25,10 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "chai": "^4.2.0",
     "eslint": "^5.7.0",
     "jsdoc": "^3.5.5",
+    "mocha": "^5.2.0",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   }
