--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npm run build & node ./bin/www",
     "postinstall": "npm run build",
     "heroku-prebuild": "npm install --only=dev",
     "build": "webpack --mode none",
