--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "test": "eslint src/{grid,helper,index,maze}.js ./bin/* ./routes/* | mocha test --recursive"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "node-sass-middleware": "0.11.0",
     "pathfinding": "^0.4.18",
     "pug": "2.0.0-beta11",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "eslint": "^5.7.0",
-    "jsdoc": "^3.5.5",
+    "eslint": "^5.16.0",
+    "jsdoc": "^3.6.2",
     "mocha": "^5.2.0",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   }
 }
